--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
-<!-- wp:paragraph -->
-<p></p>
-<!-- /wp:paragraph -->
-
-<!-- wp:jetpack/contact-form {"subject":"[Scammonden Water Sailing Club] PY Calculator","to":"owen45658@icloud.com"} -->
-<div class="wp-block-jetpack-contact-form"><!-- wp:jetpack/field-text {"label":"enter time in minutes","requiredText":"(required)"} /-->
-
-<!-- wp:jetpack/button {"element":"button","text":"Submit","lock":{"remove":true}} /--></div>
-<!-- /wp:jetpack/contact-form -->
+<!DOCTYPE html>
+<html>
+  <body align = "center">
+    <form>
+      time: <input type = "float" name = "time in minutes">
+      boat_type: <input type = "text" name = "Enter boat name">
+    </form>
+  </body>
+</html>
 
