--- a/home.html
+++ b/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Boat Time</title>
   <body align = "center">
+    <h1>Boat Time</h1>
     <form>
       time: <input type = "float" name = "time in minutes">
       boat_type: <input type = "text" name = "Enter boat name">
