--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles.css">
 <title>Boat Time</title>
   <body align = "center">
     <h1>Boat Time</h1>
