--- a/home.html
+++ b/home.html
@@ -3,12 +3,13 @@
 <head>
   <link rel="stylesheet" href="styles.css">
 <title>Boat Time</title>
-  <body align = "center">
-    <h1>Boat Time</h1>
+  <body align = "center"><br>
+    <img src = "capture.png" alt = "logo" width = 300px height = 120px><br>
     <form>
-      time: <input type = "float" name = "time in minutes">
-      boat_type: <input type = "text" name = "Enter boat name">
+      time in minutes: <input type = "number" name = "time in minutes"><br>
+      boat type/ name: <input type = "text" name = "Enter boat name"><br>
+      helm's name: <input type = "text" name = "Enter helm name"><br><br>
+      <input type = "submit" value = "submit"><br><br><br><br>
     </form>
   </body>
 </html>
-
